--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,36 +1,41 @@
+html {
+    font-size: 62.5%;
+}
 
-.sign{
+body {
     font-family: "Lato", sans-serif;
+}
+
+.sign {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 50px;
     background-color: white;
 }
-.wrap{
-    width:552px;
-    color:#181717;
+.wrap {
+    width: 552px;
+    color: #181717;
     border-radius: 10px;
     padding-top: 50px;
     padding-left: 24px;
     padding-right: 24px;
     padding-bottom: 24px;
 }
-.title{
+.title {
     font-size: 36px;
     text-align: center;
-    color:#181717;
+    color: #181717;
     font-weight: 1000;
     padding-bottom: 30px;
 }
-.wrap .input-box{
+.wrap .input-box {
     position: relative;
-    width:100%;
-    height:50px;
-    margin:30px 0;
-    
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
 }
-.input-box input{
+.input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -38,25 +43,24 @@
     outline: none;
     border: 2px solid #f1f3f5;
     border-radius: 40px;
-    font-size: 16px;
-    color:#181717;
+    font-size: 1.6rem;
+    color: #181717;
     padding: 20px 45px 20px 20px;
-    
 }
-.input-box input::placeholder{
-    color:#181717;
+.input-box input::placeholder {
+    color: #181717;
 }
-.input-box i{
-    position:absolute;
+.input-box i {
+    position: absolute;
     right: 20px;
-    top:50%;
+    top: 50%;
     transform: translateY(-50%);
-    font-size:20px;
+    font-size: 20px;
 }
-.wrap .remember-forgot{
-    display:flex;
+.wrap .remember-forgot {
+    display: flex;
     justify-content: space-between;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 600;
     margin: -15px 0 15px;
 }
@@ -64,66 +68,66 @@
     accent-color: #fff;
     margin-right: 3px;
 }
+
 .remember-forgot a {
     color: #181717;
     text-decoration: none;
 }
-.remember-forgot a:hover{
+
+.remember-forgot a:hover {
     text-decoration: underline;
 }
-.wrap .btn{
-    width:40%;
+
+.wrap .log-btn {
+    width: 40%;
     height: 45px;
     background: #181717;
     border: none;
     outline: none;
-    border-radius:20px;
-    box-shadow: 0 0 10px rgba(o,0,0,.1);
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(o, 0, 0, 0.1);
     cursor: pointer;
     font-size: 20px;
     color: white;
-    font-weight:700;
-    padding:7px 40px;
-    
+    font-weight: 700;
+    padding: 7px 40px;
 }
-.submit{
+
+.submit {
     text-align: center;
-    
 }
-.loginwith{
+.loginwith {
     text-align: center;
-    font-size:20px;
-    color:#999;
+    font-size: 20px;
+    color: #999;
     margin: 20px auto;
     position: relative;
 }
-.loginwith span{
+.loginwith span {
     display: inline-block;
     padding: 0 9.6px;
     background-color: #fff;
-    position:relative;
-    z-index:2
+    position: relative;
+    z-index: 2;
 }
 .loginwith:after {
     content: "";
     width: 100%;
-    height:1px;
-    background-color:#999;
+    height: 1px;
+    background-color: #999;
     position: absolute;
     top: 50%;
-    left:0;
+    left: 0;
 }
-.wrap .register{
+.wrap .register {
     font-size: 14.5px;
     text-align: center;
     margin: 20px 0 15px;
-
 }
 .signup-social {
     padding: 10px;
     border-radius: 20px;
-    
-    
+
     width: 50%;
     color: #181717;
     font-size: 16px;
@@ -136,7 +140,7 @@
     cursor: pointer;
     outline: none;
     box-shadow: 0 5px 10px 0 rgba(76, 111, 244, 0.5);
-  }
+}
 
 .signup-social-icon {
     width: 60px;
@@ -160,17 +164,16 @@
 .logo-wrapper img {
     width: 30px;
 }
-.gg{
+.gg {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 .register p a {
     color: #007aff;
     text-decoration: none;
     font-weight: 600;
 }
-.register p a:hover{
+.register p a:hover {
     text-decoration: underline;
 }
